--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "knock-api",
   "version": "0.1.0",
   "description": "Integration Software Engineer Project",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "test": "jest --watchAll"
   },
   "keywords": [
     "knock",
@@ -20,6 +20,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
